Edited methods NullEmail and LowerCaseCountries